Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-545

Crash when leaving session with invalid bookmarks or breakpoints

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 1.3.1
    • Qt Creator 1.2.90, Qt Creator 1.3.0, Qt Creator 1.3.83 (2.0.0-beta)
    • All Other Issues
    • None
    • Windows Vista 64, Qt 4.6.0
    • 2b46f828b4ae2f41c4efc9fde7e8b7c5e271b4de

    Description

      To reproduce:

      • Open session A containing project P
      • Add a bookmark or a breakpoint near the end of a source file, e. g. in line 50.
      • Switch to session B and open project P there
      • Remove lines from the source file until it is shorter than the bookmark's position, e. g. reduce it to 45 lines. Save.
      • Switch back to session A.
      • Try to exit Creator.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes